Initial reading and storing of position corrections and calculation of shifts (not yet stored) re #452

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -306,6 +306,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\SetScalingPSD.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\SimpleIntegration.cpp"
 				>
 			</File>
@@ -605,6 +609,10 @@
 			</File>
 			<File
 				RelativePath=".\test\RemoveBinsTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\SetScalingPSD.h"
 				>
 			</File>
 			<File
