Introduced extra checking of input XML string when using ShapeFactory; write out warning to user and return empty shape if there is a problem. Refs #493.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -450,6 +450,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\ShapeFactoryTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidDataHandling\UpdateDAE.h"
 				>
 			</File>
