Temporary fix for the fact that we aren't dealing with unphysical bins correctly when converting units to DeltaE. Am now setting the boundaries in this case to +/-DBL_MAX, which should at least mean that Rebin can be run on the output. Re #499.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -260,6 +260,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\SaveFocussedXYE.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\SaveRKH.cpp"
 				>
 			</File>
@@ -427,6 +431,10 @@
 			</File>
 			<File
 				RelativePath=".\test\SaveCSVTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\SaveFocusedXYE.h"
 				>
 			</File>
 			<File
