--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -398,6 +398,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\ShapeFactory.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Sphere.cpp"
 				>
 			</File>
@@ -612,11 +616,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\Matrix.h"
+				RelativePath=".\inc\MantidGeometry\Matrix.h"
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidGeometry\Matrix.h"
+				RelativePath=".\auxinc\Matrix.h"
 				>
 			</File>
 			<File
@@ -740,11 +744,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidGeometry\RotCounter.h"
+				RelativePath=".\auxinc\RotCounter.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\RotCounter.h"
+				RelativePath=".\inc\MantidGeometry\RotCounter.h"
 				>
 			</File>
 			<File
@@ -753,6 +757,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidGeometry\SamGeometry.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidGeometry\ShapeFactory.h"
 				>
 			</File>
 			<File
