Move ShapeFactoryTest to Geometry. Refs #493.

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -218,6 +218,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidCurveFitting\Fit1D.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidCurveFitting\Gaussian.h"
 				>
 			</File>
