--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -764,6 +764,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\ShapeFactoryTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidGeometry\Simulation.h"
 				>
 			</File>
