closes #526 Add 9 compilation and link flags to improve optimisation.
That does not make a big effect about 5% improvement on add benchmark.

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -123,6 +123,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="3"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
+				OmitFramePointers="true"
+				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories="inc;../API/inc;../Geometry/inc;../Kernel/inc;../DataObjects/inc;../../Third_Party/include"
 				PreprocessorDefinitions="WIN32;_WINDOWS;POCO_DLL;WINVER=0x0500;IN_MANTID_CURVE_FITTING=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE;GSL_DLL"
 				RuntimeLibrary="2"
@@ -149,8 +154,10 @@
 				AdditionalLibraryDirectories="../release;../../Third_Party/lib/win32"
 				GenerateDebugInformation="false"
 				SubSystem="0"
-				OptimizeReferences="0"
-				EnableCOMDATFolding="0"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				OptimizeForWindows98="1"
+				LinkTimeCodeGeneration="1"
 				TargetMachine="0"
 			/>
 			<Tool
