--- a/Code/Mantid/release/Mantid.properties
+++ b/Code/Mantid/release/Mantid.properties
@@ -32,7 +32,7 @@ instrumentDefinition.directory = ../../../../Test/Instrument
 # with a smaller LowerMemoryLimit.
 # 
 # Uncommenting the line below will lead to all 2D workspaces being of the ManagedWorkspace2D variety
-#ManagedWorkspace.LowerMemoryLimit = 0
+ManagedWorkspace.LowerMemoryLimit = 90
 ManagedWorkspace.DataBlockSize = 4000
 ManagedWorkspace.FilePath = /nonsense/fdghjksdg
 
