--- a/Code/Mantid/MatlabAPI/MatlabAPI.vcproj
+++ b/Code/Mantid/MatlabAPI/MatlabAPI.vcproj
@@ -126,6 +126,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
+				OmitFramePointers="true"
 				AdditionalIncludeDirectories="inc;../Kernel/inc;../DataObjects/inc;../Geometry/inc;../API/inc;../DataHandling/inc;../../Third_Party/include;c:/matlab/R2006a/extern/include"
 				PreprocessorDefinitions="MATLAB_MEX_FILE;WIN32;NDEBUG;_WINDOWS;_USRDLL;IN_MANTID_MATLAB_API=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
@@ -157,6 +161,7 @@
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				OptimizeForWindows98="1"
 				TargetMachine="1"
 			/>
 			<Tool
