--- a/Code/Mantid/PythonAPI/PythonAPI.vcproj
+++ b/Code/Mantid/PythonAPI/PythonAPI.vcproj
@@ -108,7 +108,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="3"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
+				OmitFramePointers="true"
+				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories="inc;../API/inc;../Kernel/inc;../DataHandling/inc;../DataObjects/inc;../Geometry/inc;../../Third_Party/include;C:\python25\include"
 				PreprocessorDefinitions="IN_MANTID_PYTHON_API=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
@@ -127,6 +131,10 @@
 				AdditionalDependencies="$(SolutionName)API.lib $(SolutionName)DataHandling.lib"
 				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).pyd"
 				AdditionalLibraryDirectories="../release;../../Third_Party/lib/win32;c:\Python25\libs"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				OptimizeForWindows98="1"
+				LinkTimeCodeGeneration="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
