--- a/Code/RPM_Kit/mantid.spec.template
+++ b/Code/RPM_Kit/mantid.spec.template
@@ -60,18 +60,16 @@ scons skiptest=1
 sed -i "s!rpmBuild = True!rpmBuild = False!" SConstruct
 cd ../MantidPlot/
 python release_date.py
+for i in MantidQt/MantidQt.pro MantidQt/mantidqt.pri qtiplot/qtiplot.pro; do \
+    sed -i "s!../../../Images!../../images!" $i; \
+    sed -i "s!-L../../Mantid/Bin/Shared!-L../../bin!" $i; \
+done
 cd MantidQt
 qmake-qt4
 make
 cd ../qtiplot
-#sed -i "s!../../../Images/images.qrc!../../images/images.qrc!" qtiplot.pro
-#sed -i "s!INCLUDEPATH       += ../../Mantid/includes/!INCLUDEPATH       += ../../../Mantid/include/!" qtiplot.pro
-#sed -i "s!-L../../Mantid/Bin/Shared!-L../../bin!" qtiplot.pro
 qmake-qt4
 make
-#sed -i "s!../../images/images.qrc!../../../Images/images.qrc!" qtiplot.pro
-#sed -i "s!INCLUDEPATH       += ../../../Mantid/include/!INCLUDEPATH       += ../../Mantid/includes/!" qtiplot.pro
-#sed -i "s!-L../../bin!-L../../Mantid/Bin/Shared!" qtiplot.pro
 
 %install
 python Mantid/src/Build/LinuxBuildScripts/cleanup.py
