--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -18,6 +18,7 @@ USRLOCALINCLUDE = '/usr/local/include'
 USRLOCALLIB = '/usr/local/lib'
 USRINCLUDE = '/usr/include'
 USRLIB = '/usr/lib'
+MANTIDLIB = '/usr/lib/Mantid'
   
 opts = Options('scons_options.py')
 opts.Add('mingw','Set to 1 to use MinGW on Windows', 0)
@@ -292,12 +293,15 @@ MantidBuild.collectIncludes('.', 'includes')
 libDirList.append(os.path.abspath('./Bin/Shared'))
 
 if os.name != 'nt':	
-   ##
-   ## BIT FOR -Wl,-rpath : This avoids the STUPID STUPID export LD_PATH in run_test 
-   ## 
-	lpts.append('-Wl,-rpath, ./Bin/Shared')
-	print lpts
-	env.Append(LINKFLAGS=lpts)
+    if rpmBuild :
+	lpts.append('-Wl,-rpath,'+MANTIDLIB)
+    else :
+	##
+	## BIT FOR -Wl,-rpath : This avoids the STUPID STUPID export LD_PATH in run_test 
+	## 
+	lpts.append('-Wl,-rpath,./Bin/Shared')
+    print lpts
+    env.Append(LINKFLAGS=lpts)
 	
 #Export for SConscripts
 env.Append(CCFLAGS=cflags)
