--- a/Code/Mantid/release/Mantid.properties
+++ b/Code/Mantid/release/Mantid.properties
@@ -22,6 +22,10 @@ logging.channels.signalChannel.class = SignalChannel
 #Where to load instrument definition files from
 instrumentDefinition.directory = ../../../../Test/Instrument
 
+# The location of the scripts directory. This is added to the python path by the
+# Python API so that Mantid scripts can be imported more easily
+pythonscripts.directory = ../scripts
+
 #
 # ManagedWorkspace.LowerMemoryLimit sets the memory limit to trigger the use of 
 # a ManagedWorkspace. A ManagedWorkspace will be used for a workspace requiring greater amount of memory 
