--- a/Code/RPM_Kit/mantid.spec.template
+++ b/Code/RPM_Kit/mantid.spec.template
@@ -15,6 +15,7 @@ BuildRequires:  scons >= 0.97
 BuildRequires:  boost-devel >= 1.34.1
 BuildRequires:  glibc-devel
 BuildRequires:  gsl-devel
+BuildRequires: 	poco-devel
 #required for mantidplot
 BuildRequires:	qt4-devel >= 4.2 
 BuildRequires:	qwt-devel
@@ -34,6 +35,7 @@ Requires: 	nexus
 Requires: 	qscintilla
 Requires:	sip
 Requires:	qwt
+Requires:	poco
 Requires:	gsl
 Requires:	glibc
 Requires:	qwtplot3d-qt4
