--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -281,6 +281,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\SetScalingPSD.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\UpdateDAE.cpp"
 				>
 			</File>
