--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -463,6 +463,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidDataHandling\SetScalingPSD.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidDataHandling\UpdateDAE.h"
 				>
 			</File>
