Set a couple of paths to something more sensible. Re #531.

--- a/Code/Mantid/release/Mantid.properties
+++ b/Code/Mantid/release/Mantid.properties
@@ -9,7 +9,7 @@ logging.loggers.root.channel.channel2 = fileChannel
 logging.channels.consoleChannel.class = ConsoleChannel
 logging.channels.consoleChannel.formatter = f1
 logging.channels.fileChannel.class = FileChannel
-logging.channels.fileChannel.path = mantid.log
+logging.channels.fileChannel.path = ../logs/mantid.log
 logging.channels.fileChannel.formatter.class = PatternFormatter
 logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s - %t
 logging.formatters.f1.class = PatternFormatter
@@ -38,7 +38,7 @@ pythonscripts.directory = ../scripts
 # Uncommenting the line below will lead to all 2D workspaces being of the ManagedWorkspace2D variety
 ManagedWorkspace.LowerMemoryLimit = 90
 ManagedWorkspace.DataBlockSize = 4000
-ManagedWorkspace.FilePath = /nonsense/fdghjksdg
+ManagedWorkspace.FilePath = ../temp
 
 #Uncommenting the line below will enable algorithm chain re-running whenever a
 #workspace is replaced. Uncommenting and setting it to 0 will also turn it off 
