re #531 some fixes for linux and a minor change to the wxs generation to include python scripts directory

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -1,16 +1,23 @@
 #framework configuration
-mantid.legs = 6
+plugins.directory = .
 
 #logging configuration
 logging.loggers.root.level = information
-logging.loggers.root.channel = fileChannel
+logging.loggers.root.channel.class = SplitterChannel
+logging.loggers.root.channel.channel1 = consoleChannel
+logging.loggers.root.channel.channel2 = fileChannel
+logging.channels.consoleChannel.class = ConsoleChannel
+logging.channels.consoleChannel.formatter = f1
 logging.channels.fileChannel.class = FileChannel
-logging.channels.fileChannel.path = Test.log
+logging.channels.fileChannel.path = ../logs/mantid.log
 logging.channels.fileChannel.formatter.class = PatternFormatter
 logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s - %t
+logging.formatters.f1.class = PatternFormatter
+logging.formatters.f1.pattern = %s-[%p] %t
+logging.formatters.f1.times = UTC;
 
-#Plugin configuration
-plugins.directory = ../../Bin/Plugins
+logging.loggers.root.channel.channel3 = signalChannel
+logging.channels.signalChannel.class = SignalChannel
 
 #Where to load instrument definition files from
 instrumentDefinition.directory = ../../../../Test/Instrument
@@ -19,10 +26,22 @@ instrumentDefinition.directory = ../../../../Test/Instrument
 # Python API so that Mantid scripts can be imported more easily
 pythonscripts.directory = ../../PythonAPI/scripts
 
-# Uncommenting the line below will lead to all 2D workspaces being of the ManagedWorkspace2D variety
-#ManagedWorkspace.LowerMemoryLimit = 0
-ManagedWorkspace.LowerMemoryLimit = 80
+#
+# ManagedWorkspace.LowerMemoryLimit sets the memory limit to trigger the use of 
+# a ManagedWorkspace. A ManagedWorkspace will be used for a workspace requiring greater amount of memory 
+# than defined by LowerMemoryLimit. LowerMemoryLimit is a precentage of the physical memory available for
+# the process. On Linux it is the free physical memory, on Windows it is the smaller of the free physical memory
+# and the available virtual memory. The default value for LowerMemoryLimit is 40%. Setting the limit too high
+# may lead to unrecoverable bad allocations. If this happens the advice is to close Mantid and relaunch it 
+# with a smaller LowerMemoryLimit.
+# 
+ManagedWorkspace.LowerMemoryLimit = 90
 ManagedWorkspace.DataBlockSize = 4000
-ManagedWorkspace.FilePath = /nonsense/fdghjksdg
+ManagedWorkspace.FilePath = ../temp
 
 algorithms.retained = 50
+
+#Uncommenting the line below will enable algorithm chain re-running whenever a
+#workspace is replaced. Uncommenting and setting it to 0 will also turn it off 
+#AlgorithmChaining.SwitchedOn = 1
+
