re #531 removed several pointless or hopelessly out of date directories from SVN

--- a/Code/Mantid/API/SConscript
+++ b/Code/Mantid/API/SConscript
@@ -15,6 +15,5 @@ myenv.Append(CPPDEFINES=[('IN_MANTID_API',1)])
 listSharedObjects = MantidBuild.getSharedObjects(listCpps, myenv)
 #BUILD CODE
 shared = myenv.SharedLibrary('lib/MantidAPI', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='lib/MantidAPI.pdb')
-static = myenv.StaticLibrary('libstatic/MantidAPI', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='libstatic/MantidAPI.pdb')
-retval = { 'shared': shared, 'static': static, 'sharedobjs' : listSharedObjects, 'libs': [ 'MantidAPI' ] }
+retval = { 'shared': shared, 'sharedobjs' : listSharedObjects, 'libs': [ 'MantidAPI' ] }
 Return('retval')
