--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -1,24 +1,6 @@
 #framework configuration
 plugins.directory = .
 
-#logging configuration
-logging.loggers.root.level = information
-logging.loggers.root.channel.class = SplitterChannel
-logging.loggers.root.channel.channel1 = consoleChannel
-logging.loggers.root.channel.channel2 = fileChannel
-logging.channels.consoleChannel.class = ConsoleChannel
-logging.channels.consoleChannel.formatter = f1
-logging.channels.fileChannel.class = FileChannel
-logging.channels.fileChannel.path = ../logs/mantid.log
-logging.channels.fileChannel.formatter.class = PatternFormatter
-logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s - %t
-logging.formatters.f1.class = PatternFormatter
-logging.formatters.f1.pattern = %s-[%p] %t
-logging.formatters.f1.times = UTC;
-
-logging.loggers.root.channel.channel3 = signalChannel
-logging.channels.signalChannel.class = SignalChannel
-
 #Where to load instrument definition files from
 instrumentDefinition.directory = ../../../../Test/Instrument
 
@@ -45,3 +27,28 @@ algorithms.retained = 50
 #workspace is replaced. Uncommenting and setting it to 0 will also turn it off 
 #AlgorithmChaining.SwitchedOn = 1
 
+# logging configuration
+# root level message filter (drop to debug for more messages)
+logging.loggers.root.level = information
+# splitting the messages to many logging channels
+logging.loggers.root.channel.class = SplitterChannel
+logging.loggers.root.channel.channel1 = consoleChannel
+logging.loggers.root.channel.channel2 = fileFilterChannel
+logging.loggers.root.channel.channel3 = signalChannel
+# output to the console - primarily for console based apps
+logging.channels.consoleChannel.class = ConsoleChannel
+logging.channels.consoleChannel.formatter = f1
+# specfic filter for the file channel raising the level to warning (drop to debug for debugging)
+logging.channels.fileFilterChannel.class= FilterChannel
+logging.channels.fileFilterChannel.channel= fileChannel
+logging.channels.fileFilterChannel.level= warning
+# output to a file (For error capturing and debugging)
+logging.channels.fileChannel.class = FileChannel
+logging.channels.fileChannel.path = ../logs/mantid.log
+logging.channels.fileChannel.formatter.class = PatternFormatter
+logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s - %t
+logging.formatters.f1.class = PatternFormatter
+logging.formatters.f1.pattern = %s-[%p] %t
+logging.formatters.f1.times = UTC;
+# SignalChannel - Passes messages to the MantidPlot User interface
+logging.channels.signalChannel.class = SignalChannel
